# iap-demo

./: .gitignore  README.md  main.py  pyproject.toml  test.db
frontend/: package-lock.json
frontend/src/: styles.scss
frontend/src/app/: app.component.html  app.component.scss  app.module.ts
frontend/src/app/component/item-create/: item-create.component.html  item-create.component.ts
frontend/src/app/component/item-details/: item-details.component.html  item-details.component.ts
frontend/src/app/component/item-list/: item-list.component.html  item-list.component.scss  item-list.component.ts
frontend/src/app/service/: items.service.ts
repository/: db_connection.py  models.py
server/: item_controller.py
