[tool.poetry]
name = "iap-demo"
version = "0.1.0"
description = ""
authors = ["Kuba Podkomórka <jpodkomorka19@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
sqlmodel = "^0.0.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
